--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -14,7 +14,7 @@
 {#            <p>{{ article.content }}</p>#}
         </div>
 
-        <a href="#" class="list-group-item list-group-item-action ">
+        <a href="/article/{{ article.id }}" class="list-group-item list-group-item-action ">
             <div class="d-flex w-100 justify-content-between">
                 <h5 class="mb-1">{{ loop.index }} / {{ article.title }}</h5>
                 <small>{{ article.category.name }}</small>
